Changes with mod_fastcgi 2.2.2

 *) Dump a compile time error if the version of Apache is too old.

 *) Wrap the SIGPIPE handler manipulation code such that it is only applicable
    to Apache releases prior to 1.3.6.

 *) Minor tweaks for RUSSIAN_APACHE.  [Sergey Gershtein <sg@mplik.ru>]

 *) Dynamic updates: 
 
    Always restart a failed dynamic application if it is the last instance.
    This means there once started there will always be at least one process
    instance of a dynamic application.  
    
    Send PLEASE_START to the PM when a connect() results in an ECONNREFUSED.
    ECONNREFUSED means the listen queue is full (or there isn't one).  Asking
    the PM to start (another) application instance may help empty it faster.
    
    Change two sleep() calls to select() based snoozes because alarm() is in
    effect and sleep() and alarm() don't always play nice together.
    
    Fixed a couple of error messages.

 *) Fix -listen-queue-depth arg on FastCgiConfig (dynamic).  Previously it
    was ignored and the default was always used.

 *) Allow the -initial-env argument to be used to pass variables from the 
    Apache process environment to the FastCGI server (by specifying a 
    variable name without the "=" or a value).  [suggested by 
    Martin Lichtin <lichtin@oanda.com>]

 *) Cleanup some debug macros.

 *) Improved script stderr handling.  [based on suggestions by 
    David Birnbaum <davidb@chelsea.net>]
    
 *) Added IRIX and FreeBSD to the list of supported platforms and other minor
    updates to the INSTALL doc.

 *) Changed the default listen-queue-depth (FCGI_DEFAULT_LISTEN_Q) from
    5 to 100.  Its still configurable with the -listen-queue-depth option.
    This should help eliminate the FAQ - Why do I see "Connection Refused"
    messages in the log?

 *) Fix a bug in FastCgiExternalServer that broke support for external servers 
    on other hosts.  [Dave Neuer <dneuer@futuristics.net>]

Changes with mod_fastcgi 2.2.1
